# OBDRead

./: .gitignore  AGENTS.md  ATTRIBUTIONS.md  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
attributions/: pyobd.md
design/: PLAN.md  readiness_parsing_reference.md
src/core/: DtcParser.cpp  DtcParser.h  ObdCommand.h  ReadinessParser.cpp  ReadinessParser.h  ScanService.cpp  ScanService.h
src/core/dto/: ConnectionState.h  DtcEntry.h  FreezeFrame.h  LogData.h  LogMeta.h  PidMeta.h  PidSample.h  ReadinessResult.h  ScanResult.h  VehicleProfile.h
src/hardware/: BleTransporter.cpp  BleTransporter.h  ObdTransporter.h  SerialTransporter.cpp  SerialTransporter.h  TcpTransporter.cpp  TcpTransporter.h
src/resources/: DtcLookup.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/components/: SafetyGate.cpp  SafetyGate.h  StatusBar.cpp  StatusBar.h
src/ui/state/: AppState.cpp  AppState.h
src/ui/views/: AdvancedView.cpp  AdvancedView.h  CodesView.cpp  CodesView.h  HomeView.cpp  HomeView.h  LiveDataView.cpp  LiveDataView.h  LogsView.cpp  LogsView.h  ReadinessView.cpp  ReadinessView.h  SettingsView.cpp  SettingsView.h
tests/: tst_AppStateTests.cpp  tst_DtcParser.cpp  tst_DtoTests.cpp  tst_ReadinessParser.cpp  tst_ScanService.cpp
